--- a/thanku.html
+++ b/thanku.html
@@ -19,7 +19,7 @@
 
 <label><font size = "10">continue your shooping:</font></label>
 
-<a href = "index.html">
+<a href = "https://github.com/a3z4YT/Magma/blob/main/index.html">
 <button><font size = "5">click on me</font></button>
 </a>
 
