--- a/thanku.html
+++ b/thanku.html
@@ -19,7 +19,7 @@
 
 <label><font size = "10">continue your shooping:</font></label>
 
-<a href = "https://a3z4yt.github.io/Magma/">
+<a href = "index.html">
 <button><font size = "5">click on me</font></button>
 </a>
 
