Update history of magma.html

--- a/history of magma.html
+++ b/history of magma.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title> kikipeada </title>
@@ -11,11 +12,10 @@ from kikipedia ,a library of readers
 <br><br>
 <align = "left">
 <font size = "6%">
-(Magma) .Magma is a paper plain making company .As you already haerd about this that <u>magma</u> old name is <u> Blue Orpat </u> and suddenly the name is again
-change as is already .The changed name of company is <u> Orset </u>. Now the real name of compant is <b>Magma</b> .This company starts from a small city of <u>
-chhatarpur (M.P)</u>on 25/6/2021 .thats a very nice day from the owner of Magma
-compant has been announced that they release their dream company al <b>8:03 AM</b>
-approxmately one year we enjoy our first annervarcy of our company .Some months later we introduce our online website of our company. Now Magma complete it's first anevarsy 
-<img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPe5U8vLoQiny9XFn-oX_UGxiN1V_EYh0Esw&usqp=CAU" height = "50%"width = "100%">
+  (MAGMA).....Released on <b>25/6/2021-8:03am</b> 200+ plains were sold. But now it's now online for all to book any plain from you home.it's a small company starts from a small city of INDIA but now it's not small <u>MAGMA</u> had owns over 50 more companys are working under <u>MAGMA groups</u> 
+<img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPe5U8vLoQiny9XFn-oX_UGxiN1V_EYh0Esw&usqp=CAU" width = "100%">
+
+  <br><br><br>
+ <span style="background-color: red;">Warning:</span> this website is only for education purpose only.
 </body>
 </html>
