--- a/orderstrt.html
+++ b/orderstrt.html
@@ -1,6 +1,7 @@
 <!DOCType html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>order</title>
 </head>
 <body>
