--- a/booking page.html
+++ b/booking page.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Magma.booking</title>
-
+</head>
 <style>
 .animate-charcter
 {
