--- a/booking page.html
+++ b/booking page.html
@@ -3,19 +3,19 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Magma.booking</title>
-</head>
+
 <style>
 .animate-charcter
 {
    text-transform: uppercase;
   background-image: linear-gradient(
     -225deg,
-    #231557 0%,
-    #44107a 29%,
+    #256c1d 0%,
+    #44107a 50%,
     #ff1361 67%,
     #fff800 100%
   );
-  background-size: auto auto;
+  background-size: 100px;
   background-clip: border-box;
   background-size: 200% auto;
   color: #fff;
@@ -23,7 +23,7 @@
   text-fill-color: transparent;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: textclip 2s linear infinite;
+  animation: textclip 6s linear infinite;
   display: inline-block;
       font-size: 190px;
 }
@@ -32,6 +32,30 @@
   to {
     background-position: 200% center;
   }
+}
+
+@media screen and (max-width: 600px){
+  .animate-charcter
+{
+   text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 50%,
+    #ff1361 67%,
+    #fff800 100%
+  );
+  background-size: 50px;
+  background-size: 100px;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  display: inline-block;
+      font-size: 60px;
+      font-weight: bolder;
+}
 }
 </style>
 </head>
@@ -46,7 +70,7 @@
 <br>
 <div class="loader"></div>
 
-<a href = "index.html">
+<a href = "Index.html">
 <button>back to shopping</button>
 </a>
 
