--- a/booking page.html
+++ b/booking page.html
@@ -57,6 +57,29 @@
       font-weight: bolder;
 }
 }
+   @media screen and (max-width: 900px){
+  .animate-charcter
+{
+   text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 50%,
+    #ff1361 67%,
+    #fff800 100%
+  );
+  background-size: 50px;
+  background-size: 100px;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  display: inline-block;
+      font-size: 60px;
+      font-weight: bolder;
+}
+}
 </style>
 </head>
 
