--- a/Mfeed.html
+++ b/Mfeed.html
@@ -53,6 +53,28 @@
             font-size: 500px;
         }
     }
+            @media screen and (max-width: 600px){
+        .CHB1{
+            color: red;
+            font-size: 100px;
+        }
+        .CHB2{
+            color: rgb(246, 169, 26);
+            font-size: 100px;
+        }
+        .CHB3{
+            color: #deb307;
+            font-size: 100px;
+        }
+        .CHB4{
+            color: lime;
+            font-size: 400px;
+        }
+        .CHB5{
+            color: green;
+            font-size: 500px;
+        }
+    }
     </style>
 <body>
 <font size = "15">
