--- a/Mfeed.html
+++ b/Mfeed.html
@@ -1,6 +1,7 @@
 <!DOCType html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>feedback</title>
 </head>
 <center>
@@ -30,49 +31,60 @@
             font-family: Arial Rounded MT;
             font-size: 100px;
         }
+        textarea{
+            border-color:white; 
+            border-radius:5px;
+        }
+        button{
+            color:black;
+             border-radius:25px; 
+             border:0;
+             background-color:lime;
+             font-family: Bauhaus 93;
+        }
 
     @media screen and (max-width: 600px){
         .CHB1{
             color: red;
-            font-size: 100px;
+            font-size: 90px;
         }
         .CHB2{
             color: rgb(246, 169, 26);
-            font-size: 100px;
+            font-size: 90px;
         }
         .CHB3{
             color: #deb307;
-            font-size: 100px;
+            font-size: 90px;
         }
         .CHB4{
             color: lime;
-            font-size: 400px;
+            font-size: 90px;
         }
         .CHB5{
             color: green;
-            font-size: 500px;
+            font-size: 90px;
         }
     }
-            @media screen and (max-width: 600px){
+    @media screen and (max-width: 900px){
         .CHB1{
             color: red;
-            font-size: 100px;
+            font-size: 90px;
         }
         .CHB2{
             color: rgb(246, 169, 26);
-            font-size: 100px;
+            font-size: 90px;
         }
         .CHB3{
             color: #deb307;
-            font-size: 100px;
+            font-size: 90px;
         }
         .CHB4{
             color: lime;
-            font-size: 400px;
+            font-size: 90px;
         }
         .CHB5{
             color: green;
-            font-size: 500px;
+            font-size: 90px;
         }
     }
     </style>
@@ -117,14 +129,14 @@
 
 <tr><td>
 <table border = "0" cellpadding = "1" style = "background-color:white; border-radius:10px;">
-<td><textarea style = "border-color:white; border-radius:5px;" cols = "45" rows = "15" placeholder = "enter your comment here!"></textarea>
+<td><textarea cols = "38" rows = "15" placeholder = "enter your comment here!"></textarea>
 </table>
 </td></tr>
 <br>
 
 
 <a href = "thanku.html">
-<button style = "color:black; border-radius:25px; border:0;background-color:lime;font-family:'Brush Script MT', cursive;"><font size = "20">submit</font></button>
+<button><font size = "20">submit</font></button>
 </a>
 
 <body bgcolor = "#4b39e6">
