--- a/Mfeed.html
+++ b/Mfeed.html
@@ -6,6 +6,9 @@
 </head>
 <center>
     <style>
+        body{
+            background-color: rgb(100, 100, 188);
+        }
         .CHB1{
             color: red;
             font-family: Arial Rounded MT;
@@ -64,6 +67,9 @@
             color: green;
             font-size: 90px;
         }
+        body{
+            background-color: rgb(135, 135, 225);
+        }
     }
     @media screen and (max-width: 900px){
         .CHB1{
@@ -86,12 +92,15 @@
             color: green;
             font-size: 90px;
         }
+        body{
+            background-color: rgb(38, 38, 104);
+        }
     }
     </style>
 <body>
 <font size = "15">
 
-    <br><br>
+    <br>
 
 <form action="/action_page.php">
 <tr><td>
@@ -139,6 +148,6 @@
 <button><font size = "20">submit</font></button>
 </a>
 
-<body bgcolor = "#4b39e6">
+
 </body>
 </html>
