--- a/index.html
+++ b/index.html
@@ -5,17 +5,11 @@
 <title>Magma.pvt.ltd</title>
 </head>
 <center>
-</center>
 <align = "right">
 <body>
 <center>
 
 <style>
-.buttoon{
-	border-color:transparent;
-	color:black;
-	background-color:transparent;
-}
 a:hover[href = "#"]{
 		background-color: rgb(236, 190, 91);
 		padding: 10px;
@@ -50,6 +44,33 @@ a:hover[href = "Mfeed.html"]{
 	text-decoration: none;
 	color:black;
 }
+.widddth{
+	width: 25%;
+	border-radius: 49%;
+}
+.widdth{
+	width: 25%;
+}
+.wideth{
+	width: 25%;
+}
+
+@media screen and (max-width: 600px){
+	.widdth{
+		width: 30%;
+		border-radius: 49%;
+	}
+}
+
+@media screen and (max-width: 900px){
+	.widdth{
+		width:30%;
+	}
+	.widddth{
+		width: 30%;
+		border-radius: 49%;
+	}
+}
 </style>
 
 <tr><td>
@@ -62,7 +83,7 @@ a:hover[href = "Mfeed.html"]{
 
 <td><a href = "contact us.html" class = "nonne">contact us</a></td>
 
-<td><a href = "myorders.html"><button class = "buttoon" class = "hower">orders</button></a></td>
+<td><a href = "myorders.html" class="nonne">orders</a></td>
 
 <td><a href = "help.html" class="nonne">help?</a></td>
 
@@ -93,14 +114,14 @@ a:hover[href = "Mfeed.html"]{
 
 <br>
 <a href = "orderstrt.html">
-<img src = "https://img.freepik.com/premium-vector/plane-illustration_262962-34.jpg" width = "20%" style = "border-radius:49%;">
+<img src = "https://img.freepik.com/premium-vector/plane-illustration_262962-34.jpg" class="widddth">
 </a>
 <br>
 <i>Galaxy air creative</i> <font color = "green"><b>[in stock]</b></font>
 <hr width = "25%">
 <br>
 <a href = "orderstrt.html">
-<img src = "https://www.pngkey.com/png/full/541-5414302_open-airplane-icon-png.png" width = "15%">
+<img src = "https://www.pngkey.com/png/full/541-5414302_open-airplane-icon-png.png" class="wideth">
 </a>
 <br>
 <i>Galaxy Air Light i21</i> <font color = "red"><b>[only few left]</b></font>
@@ -111,14 +132,14 @@ a:hover[href = "Mfeed.html"]{
 <!-- creating since 11/8/2022 -//- 5:42 PM -->
 
 <a href = "orderstrt.html">
-<img src = "https://img.freepik.com/free-icon/airplane_318-216329.jpg?w=360" width = "20%"><br>
+<img src = "https://img.freepik.com/free-icon/airplane_318-216329.jpg?w=360" class="widdth"><br>
 </a>
 <i>Galaxy Air light i22</i> <font color = "green"><b>[in stock]</b></font>
 <br>
-<hr width = "25%">
+<hr class="widdth">
 
 <a href = "orderstrt.html">
-<img src = "https://cdn-icons-png.flaticon.com/512/1032/1032917.png" width = "20%">
+<img src = "https://cdn-icons-png.flaticon.com/512/1032/1032917.png" class="widdth">
 </a>
 <br>
 <i>Galaxy Air imini</i> <font color = "green"><b>[in stock]</b></font>
@@ -131,7 +152,7 @@ a:hover[href = "Mfeed.html"]{
 	<i>Galaxy Air Colorzo</i> <font color = "#4287f5"><b>[comming soon]</b></font>
 	<hr width = "25%"> 
 
-
+</center>
 <body bgcolor = "#e0e0d5">
 </body>
 </html>
