--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html>
 <head>
+	<!---- ICON ------>
+<link rel="apple-touch-icon" sizes="180x180" href="favicon_io/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/android-chrome-512x512.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<!-----		icon.end	----->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Magma.pvt.ltd</title>
 </head>
@@ -60,6 +66,10 @@ a:hover[href = "Mfeed.html"]{
 		width: 30%;
 		border-radius: 49%;
 	}
+	.wiDth{
+		width: 25%;
+	}
+		
 }
 
 @media screen and (max-width: 900px){
@@ -70,6 +80,8 @@ a:hover[href = "Mfeed.html"]{
 		width: 30%;
 		border-radius: 49%;
 	}
+	.wiDth{
+		width: 25%;
 }
 </style>
 
@@ -146,7 +158,7 @@ a:hover[href = "Mfeed.html"]{
 <hr width = "25%">
 
 <a href = "magma order page.html">
-	<img src = "https://static-00.iconduck.com/assets.00/plane-icon-2048x2048-3fpcf2u8.png" width = "20%">
+	<img src = "https://static-00.iconduck.com/assets.00/plane-icon-2048x2048-3fpcf2u8.png" class = "wiDth">
 	</a>
 	<br>
 	<i>Galaxy Air Colorzo</i> <font color = "#4287f5"><b>[comming soon]</b></font>
