--- a/orderstrt.html
+++ b/orderstrt.html
@@ -1,6 +1,12 @@
 <!DOCType html>
 <html>
 <head>
+	<!---- ICON ------>
+<link rel="apple-touch-icon" sizes="180x180" href="favicon_io/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/android-chrome-512x512.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<!-----		icon.end	----->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>order</title>
 </head>
