--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@ a:hover[href = "Mfeed.html"]{
 .wideth{
 	width: 25%;
 }
+.wiDth{
+	width: 25%;
+}
 
 @media screen and (max-width: 600px){
 	.widdth{
