--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="manifest" href="/site.webmanifest">
 <!-----		icon.end	----->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Magma.pvt.ltd</title>
+<title>Magma Airlines</title>
 </head>
 <center>
 <align = "right">
