--- a/index.html
+++ b/index.html
@@ -1,54 +1,59 @@
 <!doctype html>
 <html>
 <head>
-	<!---- ICON ------>
-<link rel="apple-touch-icon" sizes="180x180" href="../favicon_io/android-chrome-192x192.png">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Magma airlinestitle</title>
+<!-----		font-family	------->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Black+Ops+One&family=Pacifico&display=swap" rel="stylesheet">
+<!---- ICON ------>
+<link rel="apple-touch-icon" sizes="180x180" href="favicon_io/android-chrome-192x192.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/android-chrome-512x512.png">
 <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 <!-----		icon.end	----->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Magma Airlines</title>
 </head>
-<center>
-<align = "right">
 <body>
 <center>
-
 <style>
+*{
+	margin: 0px;
+}
+
 a:hover[href = "#"]{
-		background-color: rgb(236, 190, 91);
-		padding: 10px;
-		color: white;
+		background-color: #e0e0d5;
+		padding: 14px;
+		color: black;
 }
 a:hover[href = "history of magma.html"]{
-		background-color: rgb(236, 190, 91);
-		padding:10px;
-		color: white;
-}
-a:hover[href = "contact us.html"]{
-		background-color:rgb(236, 190, 91);
-		padding:10px;
-		color: white;
+		background-color: #e0e0d5;
+		padding: 14px;
+		color: black;
 }
 a:hover[href = "myorders.html"]{
-		background-color: rgb(236, 190, 91);
-		padding: 10px;
-		color: white;
+		background-color: #e0e0d5;
+		padding: 14px;
+		color: black;
 }
 a:hover[href = "help.html"]{
-		background-color: rgb(236, 190, 91);
-		padding: 10px;
-		color: white;
+		background-color: #e0e0d5;
+		padding: 14px;
+		color: black;
 }
 a:hover[href = "Mfeed.html"]{
-		background-color: rgb(236, 190, 91);
-		padding: 10px;
-		color: white;
+		background-color: #e0e0d5;
+		padding: 14px;
+		color: black;
 }
-.nonne{
-	text-decoration: none;
-	color:black;
+.Maggma{
+	background-color: black;
+	font-size: 80px;
+	font-family:  'Black Ops One', cursive;
+	font-weight: small;
+	padding: 100px;
+	color: white;
 }
 .widddth{
 	width: 25%;
@@ -61,7 +66,21 @@ a:hover[href = "Mfeed.html"]{
 	width: 25%;
 }
 .wiDth{
-	width: 25%;
+		width: 25%;
+}
+.sizee{
+	font-size: 20px;
+}
+nav{
+	background-color: gray;
+	overflow: hidden;
+}
+nav a{
+	display: block;
+	color: white;
+	text-decoration: none;
+	padding: 14px 20px;
+	float: left;
 }
 
 @media screen and (max-width: 600px){
@@ -72,7 +91,14 @@ a:hover[href = "Mfeed.html"]{
 	.wiDth{
 		width: 25%;
 	}
-		
+	.Maggma{
+	background-color: black;
+	font-size: 45px;
+	font-family:  'Black Ops One', cursive;
+	font-weight: small;
+	padding: 50px;
+	color: white;
+}
 }
 
 @media screen and (max-width: 900px){
@@ -85,29 +111,30 @@ a:hover[href = "Mfeed.html"]{
 	}
 	.wiDth{
 		width: 25%;
+	}
+	.Maggma{
+	background-color: black;
+	font-size: 50px;
+	font-family:  'Black Ops One', cursive;
+	font-weight: small;
+	padding: 50px;
+	color: white;
+}
 }
 </style>
+			<div class="typewriter"><h1 class="Maggma">Magma Airlines</h1></div>
 
-<tr><td>
-<table border = "1" cellpadding = "10" width = "100%" bgcolor = "#70b0cf">
-<td><b><font color = "#faf605" style = "font-family: Verdana, sans-serif;">MAGMA airlines</font></b></td>
+<nav>
+<a href = "#" class="sizee">home</a>
 
-<td><a href = "#" class="nonne">home</a></td>
+<a href = "history of magma.html" class="sizee">about us</a>
 
-<td><a href = "history of magma.html" class = "nonne">about us</a></td>
+<a href = "myorders.html" class="sizee">orders</a>
 
-<td><a href = "contact us.html" class = "nonne">contact us</a></td>
+<a href = "help.html" class="sizee">help?</a>
 
-<td><a href = "myorders.html" class="nonne">orders</a></td>
-
-<td><a href = "help.html" class="nonne">help?</a></td>
-
-<td><a href = "Mfeed.html" class="nonne">feedback</a></td>
-
-
-</table>
-</td></tr>
-
+<a href = "Mfeed.html" class="sizee">feedback</a>
+</nav>
 
 <!-- for making our order page
                    
@@ -161,7 +188,7 @@ a:hover[href = "Mfeed.html"]{
 <hr width = "25%">
 
 <a href = "magma order page.html">
-	<img src = "https://static-00.iconduck.com/assets.00/plane-icon-2048x2048-3fpcf2u8.png" class = "wiDth">
+	<img src = "https://static-00.iconduck.com/assets.00/plane-icon-2048x2048-3fpcf2u8.png" class="wiDth">
 	</a>
 	<br>
 	<i>Galaxy Air Colorzo</i> <font color = "#4287f5"><b>[comming soon]</b></font>
