--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@ a:hover[href = "Mfeed.html"]{
 		width: 25%;
 }
 .sizee{
-	font-size: 20px;
+	font-size: 25px;
+	font-family: Arial;
 }
 nav{
 	background-color: gray;
@@ -99,6 +100,10 @@ nav a{
 	padding: 50px;
 	color: white;
 }
+	.sizee{
+	font-size: 10px;
+	font-family: Arial;
+	}
 }
 
 @media screen and (max-width: 900px){
@@ -120,6 +125,10 @@ nav a{
 	padding: 50px;
 	color: white;
 }
+	.sizee{
+	font-size: 10px;
+	font-family: Arial;
+	}
 }
 </style>
 			<div class="typewriter"><h1 class="Maggma">Magma Airlines</h1></div>
@@ -191,7 +200,7 @@ nav a{
 	<img src = "https://static-00.iconduck.com/assets.00/plane-icon-2048x2048-3fpcf2u8.png" class="wiDth">
 	</a>
 	<br>
-	<i>Galaxy Air Colorzo</i> <font color = "#4287f5"><b>[comming soon]</b></font>
+	<i>Galaxy Air Colorzo</i> <font color = "#4287f5"><b>[avable on 1/10/2023]</b></font>
 	<hr width = "25%"> 
 
 </center>
